# rmtguard

./: .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt
benchmarks/: run_h5ad_benchmark.py  run_pdac_showcase.py  run_phase1_benchmark.py  run_realdata_topology_benchmark.py  run_sclens_h5ad_smoke.py  run_sclens_stability_benchmark.py  run_seurat_baseline.R  run_seurat_matched_baseline.R  run_stability_benchmark.py  run_synthetic_benchmark.py  run_topology_stress_benchmark.py
data/: README.md
docs/: added_dataset_annotation_boundary.md  algorithm_rescue_probe_report.md  author_confirmation_delivery_bundle.md  author_declaration_confirmation_packet.md  author_declaration_reply_intake_runbook.md  author_declarations_and_credit_roles.md  author_metadata_status.md  author_release_execution_packet.md  author_reply_triage.md  benchmark_plan.md  benchmark_upgrade_from_concord_sclens_2026-05-12.md  claim_boundary_lint.md  claim_scope_decision.md  claim_traceability.md  competitor_positioning_concord_sclens_2026-05-12.md  component_ablation_benchmark.md  component_ablation_evidence.md  corresponding_author_proxy_assumption.md  corresponding_author_reply_intake_runbook.md  corresponding_author_signoff_tracker.md  current_evidence_freeze_2026-05-12.md  data_and_code_availability_template.md  editorial_presubmission_packet.md  editorial_risk_audit.md  external_release_plan.md  external_review_action_plan.md  external_review_feedback_triage.md  figure4_pdac_tme_wording_freeze.md  figure4_strengthened_text_audit.md  figure_caption_source_audit.md  genome_biology_fallback_v2_packet.md  genome_biology_transfer_package.md  github_public_repo_action_required.md  github_release_checklist.md  github_release_execution.md  (+57 more)
(+288 files in other folders)
